service.yaml
apiVersion: v1
kind: Service
metadata:
  name: wisecow-app
spec:
  selector:
    app: wisecow
  ports:
  - name: http
    port: 80
    targetPort: 5000
  type: LoadBalancer
